--- a/src/App.css
+++ b/src/App.css
@@ -383,3 +383,73 @@ body {
     width: 100%;
   }
 }
+
+.stats-wrapper {
+  width: 1440px;
+  height: 215.7957763671875px;
+  justify-content: space-between;
+  opacity: 1;
+  top: 1771px;
+  left: 18.3%;
+  padding-top: 24px;
+  padding-right: 59px;
+  padding-bottom: 24px;
+  padding-left: 59px;
+  position: absolute;
+  background-color: #ffffff;
+
+}
+
+
+.stats {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 40px;
+}
+
+.stats-wrapper::after {
+  content: "";
+  display: absolute;
+  height: 0.5px;
+  max-width: 1100px;
+  margin: 0 auto;
+  background: linear-gradient(to right,
+      transparent,
+      rgba(209, 175, 175, 0.163),
+      transparent);
+
+}
+
+.stat {
+  text-align: center;
+  flex: 5;
+  position: relative;
+
+}
+
+.stat:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  right: 4px;
+  top: 10%;
+  height: 100%;
+  width: 1px;
+  background: rgba(53, 52, 52, 0.593);
+}
+
+.label {
+  color: #000000;
+  font-size: 16px;
+  margin-bottom: 10px;
+  font-weight: 500;
+
+}
+
+.value {
+  color: #000000;
+  font-size: 48px;
+  font-weight: bold;
+}
