some deign fixed

--- a/src/App.css
+++ b/src/App.css
@@ -356,10 +356,11 @@ body {
 }
 
 .about-content p {
-  font-size: 20px;
+  font-size: 14px;
   line-height: 1.6;
   margin-bottom: 16px;
-  color: #000000;
+  color: #2c2a2a;
+  text-align: justify;
 }
 
 /* BUTTON */
