--- a/src/App.css
+++ b/src/App.css
@@ -735,6 +735,7 @@ body {
   border-radius: 999px;
   cursor: pointer;
 }
+
 .check-item {
   display: flex;
   gap: 16px;
@@ -769,7 +770,7 @@ body {
   font-size: 16px;
   color: #000000;
   line-height: 1.5;
-  font-weight: 400 ;
+  font-weight: 400;
 }
 
 @media (max-width: 980px) {
@@ -789,4 +790,165 @@ body {
   }
 }
 
+/* BASE */
+body {
+  margin: 0;
+  font-family: Inter, Arial, sans-serif;
+  background: #f7f7f7fb;
+}
+
+/* SECTION */
+.figma-section {
+  width: 1440px;
+  height: auto;
+  opacity: 1;
+  top: 3500px;
+  padding: 80px 80px 80px 109px;
+  background: #ffffff;
+  position: absolute;
+  left: 18.3%;
+}
+
+.figma-title {
+  font-size: 48px;
+  font-weight: 500;
+  letter-spacing: -0.5px;
+  margin-bottom: 12px;
+  text-align: center;
+  color:#000
+}
+
+.figma-subtitle {
+  max-width: 400px;
+  margin: 0 auto 56px;
+  font-size: 20px;
+  line-height: 1.6;
+  color: #000000;
+  text-align: center;
+}
+
+/* GRID */
+.figma-grid {
+  max-width: 1010px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 32px;
+}
+
+/* CARD */
+.figma-card {
+  background: #ffffff;
+  padding: 24px 24px 28px;
+  border-radius: 16px;
+  box-shadow: 0px 12px 32px rgba(0, 0, 0, 0.251);
+  text-align: left;
+}
+
+/* HEADER */
+.card-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #000000;
+}
+
+.card-top h3 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+/* VERIFIED ICON */
+.verified {
+  width: 28px;
+  height: 28px;
+  background: #ecfdf5;
+  color: #22c55e;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+/* RATING */
+.rating {
+  margin: 10px 0 14px;
+  font-size: 14px;
+  color:#000
+}
+
+.rating span {
+  color: #9ca3af;
+}
+
+/* DETAILS */
+.details p {
+  font-size: 14px;
+  color: #242424;
+  margin-bottom: 6px;
+}
+
+/* TAGS */
+.chips {
+  display: flex;
+  gap: 8px;
+  margin: 16px 0 22px;
+  flex-wrap: wrap;
+  color:#000
   
+}
+
+.chips span {
+  background: #ffffff;
+  color: #22c55e;
+  padding: 15px 12px;
+  font-size: 12px;
+  border-radius: 999px;
+}
+
+/* BUTTON */
+.cta {
+  width: 100%;
+  height: 44px;
+  border-radius: 999px;
+  border: 1px solid #d1d5db;
+  background: white;
+  font-size: 14px;
+  cursor: pointer;
+  color:#282626;
+}
+
+.cta.active {
+  background: #22c55e;
+  color: white;
+  border: none;
+}
+
+/* SHOW MORE */
+.show-more-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 56px;
+}
+
+.show-more-btn {
+  height: 40px;
+  padding: 0 22px;
+  border-radius: 999px;
+  border: none;
+  background: #0f172a;
+  color: white;
+  font-size: 13px;
+  cursor: pointer;
+}
+
+
+/* RESPONSIVE */
+@media (max-width: 900px) {
+  .figma-grid {
+    grid-template-columns: 1fr;
+  }
+}
