--- a/src/App.css
+++ b/src/App.css
@@ -815,7 +815,7 @@ body {
   letter-spacing: -0.5px;
   margin-bottom: 12px;
   text-align: center;
-  color:#000
+  color: #000
 }
 
 .figma-subtitle {
@@ -876,7 +876,7 @@ body {
 .rating {
   margin: 10px 0 14px;
   font-size: 14px;
-  color:#000
+  color: #000
 }
 
 .rating span {
@@ -896,8 +896,7 @@ body {
   gap: 8px;
   margin: 16px 0 22px;
   flex-wrap: wrap;
-  color:#000
-  
+  color: #000
 }
 
 .chips span {
@@ -917,7 +916,7 @@ body {
   background: white;
   font-size: 14px;
   cursor: pointer;
-  color:#282626;
+  color: #282626;
 }
 
 .cta.active {
@@ -951,4 +950,165 @@ body {
   .figma-grid {
     grid-template-columns: 1fr;
   }
+}
+
+/* SECTION */
+.testimonial-section {
+  background: #ffffff;
+  padding: 96px 150px 80px;
+  color: #fff;
+  width: 1440px;
+  height: auto;
+  opacity: 1;
+  top: 4700px;
+  position: absolute;
+  left: 18.3%;
+}
+
+.testimonial-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-bottom: 56px;
+}
+
+.testimonial-text {
+  max-width: 720px;
+  font-size: 15px;
+  line-height: 1.6;
+  color: #44444485;
+  display: absolute;
+  align-items: flex-end;
+  margin: 0px;
+  text-align: left;
+
+}
+
+.view-all {
+  font-size: 14px;
+  color: #ffffff;
+  text-decoration: none;
+  height: 42px;
+  padding: 5px 22px;
+  border-radius: 999px;
+  background-color: #000000;
+}
+
+/* CARDS */
+.testimonial-cards {
+  display: flex;
+  gap: 24px;
+  margin-bottom: 48px;
+}
+
+/* CARD */
+.testimonial-card {
+  background: #fff;
+  color: #000;
+  border-radius: 16px;
+  padding: 28px;
+  width: 360px;
+  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.304);
+}
+
+/* STARS */
+.stars {
+  color: #ff7b00;
+  font-size: 18px;
+  margin-bottom: 20px;
+  
+}
+
+/* TEXT */
+.testimonial-card h3 {
+  font-size: 18px;
+  margin-bottom: 12px;
+  
+}
+
+.review {
+  font-size: 14px;
+  line-height: 1.6;
+  color: #444;
+  margin-bottom: 28px;
+}
+
+/* AUTHOR */
+.author {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+}
+
+.author strong {
+  font-size: 14px;
+  display: block;
+}
+
+.author span {
+  font-size: 12px;
+  color: #777;
+}
+
+.testimonial-footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 13px;
+  color: #aaa;
+}
+
+.nav-buttons {
+  display: flex;
+  gap: 10px;
+}
+
+.nav-buttons button {
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  border: 1px solid #00000083;
+  background: #ffffff;
+  color: rgb(0, 0, 0);
+}
+.nav-buttons1 button {
+  width: 36px;
+  height: 36px;                     
+  border-radius: 50%;
+  border: none;
+  background: #000000;
+  color: rgb(255, 255, 255);
+}
+
+/* RESPONSIVE */
+@media (max-width: 1024px) {
+  .testimonial-cards {
+    flex-direction: column;
+  }
+
+  .testimonial-section {
+    padding: 60px 20px;
+  }
+}
+.testimonial-title {
+  font-size: 36px;
+  font-weight: 600;
+  margin-bottom: 12px;
+  color:#000000;
+}
+
+.testimonial-sub {
+  max-width: 720px;
+  font-size: 15px;
+  line-height: 1.6;
+  color: #737171;
+}
+
+/* AUTHOR IMAGE */
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+  background-repeat: no-repeat;
 }
