--- a/src/App.css
+++ b/src/App.css
@@ -1055,7 +1055,7 @@ body {
   justify-content: space-between;
   align-items: center;
   font-size: 13px;
-  color: #aaa;
+  color: #2e2e2eb6;
 }
 
 .nav-buttons {
@@ -1111,4 +1111,113 @@ body {
   border-radius: 50%;
   object-fit: cover;
   background-repeat: no-repeat;
+}
+
+/* FAQ SECTION */
+.faq-section {
+  width: 1440px;
+  height: auto;
+  opacity: 1;
+  top: 5420px;
+  padding: 80px 80px 80px 109px;
+  background: #ffffff;
+  position: absolute;
+  left: 18.3%;
+}
+
+.faq-container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.faq-header {
+  text-align: left;
+  margin-bottom: -280px;
+}
+
+.faq-badge {
+  font-size: 14px;
+  color: #096c49;
+  display: inline-block;
+  margin-bottom: 10px;
+  border: 1px solid #096c49;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+
+.faq-header h2 {
+  font-size: 48px;
+  font-weight: 600;
+  color: #000000;
+  margin: 0;
+  letter-spacing: 0%;
+}
+
+.faq-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-left: auto;
+  width: 50%;
+  padding: 24px;
+}
+
+.faq-item {
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  padding: 28px;
+  background: #ffffff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.faq-question {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.faq-question h3 {
+  font-size: 20px;
+  font-weight: 600;
+  color: #000000;
+  margin: 0;
+}
+
+.faq-toggle {
+  font-size: 24px;
+  font-weight: bold;
+  color: #096c49;
+  transition: transform 0.3s ease;
+}
+
+.faq-answer {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.faq-answer p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #333333;
+  margin: 0;
+  text-align: justify;
+}
+
+@media (max-width: 900px) {
+  .faq-section {
+    padding: 60px 20px;
+    left: 6%;
+    width: 88%;
+  }
+
+  .faq-header h2 {
+    font-size: 36px;
+  }
+
+  .faq-item {
+    padding: 15px;
+  }
 }
